# metal-coils-warehouse-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: database.py  main.py
src/api/: coil_router.py  database_router.py  routers.py  statistics_router.py
src/models/: coil_model.py
src/repositories/: base.py  coil_repository.py
src/schemas/: coil_schema.py  statistics_schema.py
src/services/: coil_service.py  statistics_service.py
tests/: conftest.py  test_coil_router.py  test_statistics_router.py
tests/api/: test_coil_router.py  test_statistics_router.py
tests/services/: test_coil_service.py  test_statistics_service.py
